--- a/etc/skel/.config/xfce4/panel/whiskermenu-15.rc
+++ b/etc/skel/.config/xfce4/panel/whiskermenu-15.rc
@@ -1,6 +1,6 @@
 favorites=exo-web-browser.desktop,exo-mail-reader.desktop,exo-file-manager.desktop,exo-terminal-emulator.desktop
 recent=xfce-settings-manager.desktop,org.manjaro.pamac.manager.desktop,exo-preferred-applications.desktop,tearch-settings-manager.desktop,xfce4-power-manager-settings.desktop,libreoffice-calc.desktop,arcolinux-welcome-app.desktop,clementine.desktop,htop.desktop
-button-icon=/home/efectn/.icons/Tela-black/tearch_logo.png
+button-icon=/usr/share/icons/Tela-black/tearch_logo.png
 button-single-row=false
 show-button-title=false
 show-button-icon=true
